--- a/index.html
+++ b/index.html
@@ -20,10 +20,33 @@
     />
   </head>
   <body>
-   <div class="profile-card">
-    <div class="image">
-        <img src="image.jpeg" alt="profile-image">
+    <div class="profile-card">
+      <div class="image">
+        <img src="image.jpeg" alt="profile-image" />
+      </div>
+      <div class="text-data">
+        <span class="name"> Shivam Gupta </span>
+        <span class="prof"> MERN STACK DEVELOPER </span>
+        <div class="media-buttons">
+          <a href="https://www.instagram.com/shivam_since2002_/">
+            <img src="instagram-line.png" alt="insta">
+          </a>
+          <a href="https://www.facebook.com/Shivam2109964">
+            <img src="facebook-line.png" alt="facebook-line">
+          </a>
+          <a href="https://github.com/shivam2109964">
+            <img src="github-line.png" alt="github-line">
+          </a>
+        </div>
+        <div class="buttons">
+          <button class="button">
+            Subscribe
+          </button>
+          <button class="button">
+            Message
+          </button>
+        </div>
+      </div>
     </div>
-   </div>
   </body>
 </html>
